--- a/style.css
+++ b/style.css
@@ -12,15 +12,15 @@ body {
   display: flex;
   flex-wrap: wrap;
   border: 1px solid #ccc;
-  width: 350px;
+  width: 400px;
+  height: 400px;
 }
 
 .square {
-  width: 20px;
-  height: 20px;
   box-sizing: border-box;
   border: 1px solid #fff;
   background-color: #ccc;
+  flex-wrap: wrap;
 }
 
 .square:hover {
