--- a/style.css
+++ b/style.css
@@ -18,9 +18,11 @@ body {
 
 .square {
   box-sizing: border-box;
-  border: 1px solid #fff;
+  /* border: 1px solid #fff; */
   background-color: #ccc;
   flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
 }
 
 .square:hover {
