--- a/style.css
+++ b/style.css
@@ -32,3 +32,14 @@ body {
 .black {
   background-color: black;
 }
+
+.erase {
+  background-color: #ccc;
+}
+
+#draw-erase {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 46px;
+}
