Improse erase action anfd polished code

--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ body {
   padding: 0;
 }
 
-.square:hover {
+/* .square:hover {
   background-color: black;
-}
+} */
 
 .black {
   background-color: black;
